# object_recognition

./: README.md
RANSAC/: CMakeLists.txt  README.md  capture.cpp
RANSAC/src/BasicTools/: CMakeLists.txt
RANSAC/src/BasicTools/Vtk/: VtkMeshSampler.cpp
RANSAC/src/VtkBasics/: VtkLine.cpp  VtkPoints.cpp  VtkPoints.h  VtkPolyData.cpp
doc/: Installation.md  ObjRecRANSAC.md  Realsense_Initialization.md
linemod/conf/: detection_d435.ros.ork  detection_sr300.ork
rviz/: kinect_openni.rviz  realsense2_d400.rviz  realsense_sr300.rviz
tabletop/conf/: detection_d435.object.ros.ork  detection_sr300.object.ros.ork
